@@ -90,6 +90,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- Azure Key Vault + Spring -->
+		<dependency>
+			<groupId>com.azure.spring</groupId>
+			<artifactId>spring-cloud-azure-starter-keyvault-secrets</artifactId>
+		</dependency>
+
 		<!-- Spring Security para BCrypt -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -149,6 +155,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<jvmArguments>--enable-native-access=ALL-UNNAMED</jvmArguments>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
